[package]
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "Pure-Rust LDAPv3 Client"
documentation = "https://docs.rs/ldap3"
keywords = ["ldap", "client", "tokio", "async"]
license = "MIT/Apache-2.0"
name = "ldap3"
readme = "README.md"
repository = "https://github.com/inejge/ldap3"
version = "0.8.1"
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros", "io-util", "sync", "time", "net"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = "0.1"
bytes = "1"
nom = "2"
url = "2"
futures = "0.3.6"
percent-encoding = "2.1.0"
futures-util = "0.3.6"
log = "0.4.8"
lazy_static = "1.4.0"
thiserror = "1.0.21"
native-tls = { version = "0.2.6", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
rustls = { version = "0.19", optional = true }
tokio-rustls = { version = "0.22", optional = true, features = ["dangerous_configuration"]}
maplit = "1.0.2"
async-trait = "0.1.41"

[dependencies.lber]
path = "lber"
version = "0.3.0"

[features]
default = ["sync", "tls"]
tls = ["tls-native"]
tls-native = ["native-tls", "tokio-native-tls"]
tls-rustls = ["rustls", "tokio-rustls"]
sync = ["tokio/rt"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "io-util", "sync", "time", "net", "rt-multi-thread"] }
env_logger = "0.7"

[workspace]
members = [".", "lber"]
