[package]
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "Pure-Rust LDAP Client"
documentation = "https://docs.rs/ldap3"
keywords = ["ldap", "client", "tokio", "async"]
license = "MIT/Apache-2.0"
name = "ldap3"
readme = "README.md"
repository = "https://github.com/inejge/ldap3"
version = "0.10.5"
edition = "2021"

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "io-util", "sync", "time", "net"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tokio-stream = "0.1.8"
bytes = "1.1.0"
nom = "2.2.1"
url = "2.2.2"
futures = "0.3.6"
percent-encoding = "2.1.0"
futures-util = "0.3.6"
log = "0.4.8"
lazy_static = "1.4.0"
thiserror = "1.0.21"
native-tls = { version = "0.2.6", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
rustls = { version = "0.20.4", optional = true }
tokio-rustls = { version = "0.23.2", optional = true, features = ["dangerous_configuration"] }
rustls-native-certs = { version = "0.6.1", optional = true }
x509-parser = { version = "0.13.1", optional = true }
ring = { version = "0.16.20", optional = true }
cross-krb5 = { version = "0.3.0", optional = true }
async-trait = "0.1.41"

[dependencies.lber]
path = "lber"
version = "0.3.0"

[features]
default = ["sync", "tls"]
tls = ["tls-native"]
tls-native = ["native-tls", "tokio-native-tls", "tokio/rt"]
tls-rustls = ["rustls", "tokio-rustls", "rustls-native-certs", "x509-parser", "ring", "tokio/rt"]
sync = ["tokio/rt"]
gssapi = ["cross-krb5"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "io-util", "sync", "time", "net", "rt-multi-thread"] }
env_logger = "0.9.0"

[package.metadata.docs.rs]
default-features = false
features = ["sync", "tls", "gssapi"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "lber"]
