[package]
authors = ["Ivan Nejgebauer <inejge@gmail.com>"]
description = "Pure-Rust LDAP Client"
documentation = "https://docs.rs/ldap3"
keywords = ["ldap", "client", "tokio", "async"]
license = "MIT/Apache-2.0"
name = "ldap3"
readme = "README.md"
repository = "https://github.com/inejge/ldap3"
version = "0.11.0-beta.1"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "io-util", "sync", "time", "net"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
tokio-stream = "0.1.11"
bytes = "1.3.0"
nom = "7.1.1"
url = "2.3.1"
futures = "0.3.25"
percent-encoding = "2.2.0"
futures-util = "0.3.25"
log = "0.4.17"
lazy_static = "1.4.0"
thiserror = "1.0.38"
native-tls = { version = "0.2.11", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
rustls = { version = "0.20.7", optional = true }
tokio-rustls = { version = "0.23.4", optional = true, features = ["dangerous_configuration"] }
rustls-native-certs = { version = "0.6.2", optional = true }
x509-parser = { version = "0.14.0", optional = true }
ring = { version = "0.16.20", optional = true }
cross-krb5 = { version = "0.3.0", optional = true }
async-trait = "0.1.60"

[dependencies.lber]
path = "lber"
version = "0.4.0"

[features]
default = ["sync", "tls"]
tls = ["tls-native"]
tls-native = ["native-tls", "tokio-native-tls", "tokio/rt"]
tls-rustls = ["rustls", "tokio-rustls", "rustls-native-certs", "x509-parser", "ring", "tokio/rt"]
sync = ["tokio/rt"]
gssapi = ["cross-krb5"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "io-util", "sync", "time", "net", "rt-multi-thread"] }
env_logger = "0.10.0"

[package.metadata.docs.rs]
default-features = false
features = ["sync", "tls", "gssapi"]
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = [".", "lber"]
