[package]
authors = ["Gregor Reitzenstein <dean4devil@paranoidlabs.org>"]
categories = ["encoding", "parsing"]
description = "A ASN.1 BER Parser&Writer based on Nom"
keywords = ["ASN1", "BER", "Nom"]
license = "MIT"
name = "asnom"
version = "0.1.1"

[dependencies]
byteorder = "1.0.0"
bytes = "0.4.1"
nom = "2.0.1"
