[package]
authors = ["Gregor Reitzenstein <dean4devil@paranoidlabs.org>", "Ivan Nejgebauer <inejge@gmail.com>"]
categories = ["encoding", "parsing"]
description = "An ASN.1/BER parser/encoder based on nom"
keywords = ["ASN.1", "BER", "nom"]
license = "MIT"
name = "lber"
version = "0.1.2"

[dependencies]
byteorder = "1.0.0"
bytes = "0.4.1"
nom = "2.0.1"
